--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AccentButton" parent="@android:style/Widget.Material.Light.Button">
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">@color/textOnAccent</item>
+    </style>
+
 </resources>
