--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,12 @@
         <item name="android:textColor">@color/textOnAccent</item>
     </style>
 
+    <style name="AppBar">
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:textColor">@color/textOnAccent</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
