--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,12 @@
         <item name="android:textColor">@color/textOnAccent</item>
     </style>
 
+    <style name="AccentButtonInverted" parent="@android:style/Widget.Material.Light.Button">
+        <item name="android:strokeColor">@color/colorAccent</item>
+        <item name="android:background">#fff</item>
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
     <style name="AppBar">
         <item name="android:background">@color/colorAccent</item>
         <item name="android:textColor">@color/textOnAccent</item>
