--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -30,44 +30,5 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:background="#fff"
-        android:elevation="2dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:weightSum="12"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            style="@style/IconButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:contentDescription="@string/btn_home_description"
-            app:srcCompat="@drawable/ic_home_theme_24dp" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/btn_new_post"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:clickable="true"
-            android:focusable="true"
-            app:srcCompat="@drawable/ic_add_white_24dp" />
-
-        <ImageButton
-            android:id="@+id/btn_person"
-            style="@style/IconButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:contentDescription="@string/btn_profile_description"
-            app:srcCompat="@drawable/ic_person_theme_24dp" />
-    </LinearLayout>
+    <include layout="@layout/bottom_bar" />
 </android.support.constraint.ConstraintLayout>
